modified api endpoints to include specific product requests
