# routes/order.js
@@ -4,6 +4,7 @@ const validation = require('../middleware/validate');
 const { isAuthenticated } = require("../middleware/authenticate");
 
 routes.get('/', orderController.getAll);
+routes.get('/:status', orderController.getByStatus);
 routes.get('/:id', orderController.getSingle);
 routes.post('/', isAuthenticated, validation.saveOrder, orderController.createOrder);
 routes.put('/:id', isAuthenticated, validation.saveOrder, orderController.updateOrder);
